@@ -1,3 +1,8 @@
+5 October 2018: Wouter
+	- Squelch EADDRNOTAVAIL errors when the interface goes away,
+	  this omits 'can't assign requested address' errors unless
+	  verbosity is set to a high value.
+
 2 October 2018: Wouter
 	- updated contrib/fastrpz.patch to apply for this version
 	- dnscrypt.c removed sizeof to get array bounds.
